# pysplit_inrail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.txt  GIT_READY_CHECKLIST.md  LICENSE  PROJECT_STRUCTURE.md  README.md  all_trains_data.json  app.py  create_station_cache.py  formatters.py  pyproject.toml  rail_scrapper.py  requirements.txt  setup.py  split_journey.py  stations.py  stations_cache.json  streamlit_app.py  trains_cache.json
.agents/skills/: developing-with-streamlit
.github/workflows/: publish.yml
pyinrail/: railway_api.py
pysplit_inrail/: __init__.py  create_stations_endpoint.py  create_trains_json.py  formatters.py  split_journey.py  stations.py
tests/: test_cli.py  test_formatters.py  test_railway_api.py  test_split_journey.py  test_stations.py
