[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysplit_inrail"
version = "1.0.1"
description = "Indian Railways split journey search tool - find booking opportunities by intelligently splitting long journeys into segments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Srinivasa Rao", email = "srinirao3433@gmail.com"}
]
keywords = [
    "indian-railways",
    "split-journey",
    "train-booking",
    "rail-ticket",
    "railway-api",
    "ixigo",
    "railyatri"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.36.0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pylint>=2.17",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/prasathpp/pysplit_inrail"
Documentation = "https://github.com/prasathpp/pysplit_inrail/blob/main/README.md"
Repository = "https://github.com/prasathpp/pysplit_inrail.git"
Issues = "https://github.com/prasathpp/pysplit_inrail"

[tool.setuptools]
packages = ["pysplit_inrail"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.pylint.messages_control]
disable = "C0111,W0212"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
